--- a/jemdoc.css
+++ b/jemdoc.css
@@ -1,9 +1,16 @@
 /* Default css file for jemdoc. */
 
+/* table#tlayout {
+    border: none;
+    border-collapse: separate;
+    background: white;
+} */
 table#tlayout {
     border: none;
     border-collapse: separate;
     background: white;
+    width: 1000px; /* 设置固定宽度 */
+    margin: 0 auto; /* 居中显示 */
 }
 
 body {
@@ -31,7 +38,7 @@ body {
     vertical-align: top;
 }
 
-#layout-content {
+/* #layout-content {
 	padding-top: 0.0em;
 	padding-left: 1.0em;
 	padding-right: 1.0em;
@@ -39,6 +46,18 @@ body {
     background: white;
     text-align: left;
     vertical-align: top;
+} */
+/* 修改 #layout-content */
+#layout-content {
+    padding-top: 0.0em;
+    padding-left: 1.0em;
+    padding-right: 1.0em;
+    border: none;
+    background: white;
+    text-align: left;
+    vertical-align: top;
+    width: 1000px; /* 设置固定宽度 */
+    margin: 0 auto; /* 居中显示 */
 }
 
 #layout-menu a {
