--- a/jemdoc.css
+++ b/jemdoc.css
@@ -6,11 +6,27 @@ table#tlayout {
     background: white;
 }
 
-body {
+/* body {
 	background: white;
 	font-family: Georgia, serif;
 	padding-bottom: 8px;
 	margin: 0;
+} */
+
+body {
+  font-family: Georgia, serif;
+  color: #000;
+  background-color: #ffffff;
+  text-align:left; /* for IE */
+  margin-top: 30px;
+  margin-bottom: 30px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-left:  50px;
+  padding-right: 50px;
+  padding-top: 10px;
+  padding-bottom: 30px;
+  max-width: 960px;
 }
 
 #layout-menu {
